<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bg_g2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".Activity_game2">

    <ImageButton
        android:id="@+id/info_game2_btn_open"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/text_balance3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/back2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_info_24" />
    <ImageView
        android:id="@+id/back2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:onClick="back_main"
        android:src="@mipmap/back_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_balance3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="236dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="30dp"
        android:text="@string/text_balance"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/balance3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/balance3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:text="@string/balance"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cout_rand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="142dp"
        android:text=""
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_numb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ваше последнее число:"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/cout_rand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/user_numb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/user_numb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cout_rand"
        android:layout_marginTop="10dp"
        android:layout_marginRight="80dp"
        />

    <TextView
        android:id="@+id/cow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Совпадений:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_numb"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/cow_man"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="На месте:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cow"
        android:layout_marginTop="10dp"
        />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="280dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/n1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="click_n"
                android:padding="3dp"
                android:text="@string/n1"
                android:textSize="20dp"
                app:cornerRadius="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="click_n"
                android:padding="3dp"

                android:text="@string/n2"
                android:textSize="20dp"
                app:cornerRadius="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="click_n"
                android:padding="3dp"
                android:text="@string/n3"
                android:textSize="20dp"
                app:cornerRadius="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="click_n"
                android:padding="3dp"
                android:text="@string/n4"
                android:textSize="20dp"
                app:cornerRadius="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n5"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="click_n"
                android:padding="3dp"
                android:text="@string/n5"
                android:textSize="20dp"
                app:cornerRadius="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n6"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="click_n"
                android:padding="3dp"
                android:text="@string/n6"
                android:textSize="20dp"
                app:cornerRadius="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n7"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="click_n"
                android:padding="3dp"
                android:text="@string/n7"
                android:textSize="20dp"
                app:cornerRadius="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n8"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="click_n"
                android:padding="3dp"
                android:text="@string/n8"
                android:textSize="20dp"
                app:cornerRadius="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n9"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="click_n"
                android:padding="3dp"
                android:text="@string/n9"
                android:textSize="20dp"
                app:cornerRadius="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/del"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="numb_del"
                android:padding="3dp"
                android:text="del"
                android:textSize="20dp"
                app:cornerRadius="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n0"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="click_n"
                android:padding="3dp"
                android:text="@string/n0"
                android:textSize="20dp"

                app:cornerRadius="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/user_numb_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="Click_user_numb_btn"
                android:padding="3dp"
                android:text="ok"
                android:textSize="20dp"
                app:cornerRadius="10dp" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>