<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bg_g1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".game_1">

    <TextView
        android:id="@+id/balance2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:text="@string/balance"
        android:textSize="29sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_balance2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="236dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="30dp"
        android:text="@string/text_balance"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/balance2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:onClick="back_main"
        android:src="@mipmap/back_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/randText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:text="@string/n0"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="116dp"
        android:text="@string/more"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/more_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="52dp"
        android:text="-"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toEndOf="@+id/more"
        app:layout_constraintTop_toBottomOf="@+id/balance2" />

    <TextView
        android:id="@+id/less_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="10dp"
        android:text="-"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/more"
        app:layout_constraintHorizontal_bias="0.763"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="280dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal">



            <com.google.android.material.button.MaterialButton
                android:id="@+id/n1"
                app:cornerRadius="10dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:padding="3dp"
                android:onClick="click_n"
                android:text="@string/n1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n2"
                app:cornerRadius="10dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"

                android:padding="3dp"
                android:onClick="click_n"
                android:text="@string/n2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n3"
                app:cornerRadius="10dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:padding="3dp"
                android:onClick="click_n"
                android:text="@string/n3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n4"
                app:cornerRadius="10dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:padding="3dp"
                android:onClick="click_n"
                android:text="@string/n4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n5"
                app:cornerRadius="10dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:padding="3dp"
                android:onClick="click_n"
                android:text="@string/n5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n6"
                app:cornerRadius="10dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:padding="3dp"
                android:onClick="click_n"
                android:text="@string/n6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n7"
                app:cornerRadius="10dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:padding="3dp"
                android:onClick="click_n"
                android:text="@string/n7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n8"
                app:cornerRadius="10dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:padding="3dp"
                android:onClick="click_n"
                android:text="@string/n8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n9"
                app:cornerRadius="10dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:padding="3dp"
                android:onClick="click_n"
                android:text="@string/n9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/del"
                app:cornerRadius="10dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:padding="3dp"
                android:onClick="numb_del"
                android:text="del" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n0"
                app:cornerRadius="10dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:padding="3dp"
                android:onClick="click_n"

                android:text="@string/n0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/chect_user_namb"
                app:cornerRadius="10dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:padding="3dp"
                android:onClick="chect_user_numb"
                android:text="ok" />
        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <ImageButton
        android:id="@+id/info_game1_btn_open"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/text_balance2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_info_24" />

</androidx.constraintlayout.widget.ConstraintLayout>